# exx_wall_extraction

./: CMakeLists.txt  README.md  compressed_extracted_planes.pcd  compressed_extracted_projected_planes.pcd  compressed_hulls_planes.pcd  compressed_simplified_hulls_planes.pcd  constructed_plane.pcd  constructed_plane_voxel.pcd  exx.sublime-workspace  mesh.vtk  package.xml  test_pcd.pcd  test_pcd_plane.pcd  test_plane.launch
include/: color_gradient.h  compression.cpp  compression.h  exx_common_node.sublime-project  exx_common_node.sublime-workspace
include/compression/: cloud_filtering.h  cloud_triangulation.h  compress_methods.h  plane_concave_hull.h  plane_extraction.h  plane_extraction_node.h
include/exx_plane_extraction/: compress_methods.h  compressed_extracted_planes.pcd  compressed_extracted_projected_planes.pcd  compressed_hulls_planes.pcd  compressed_voxel_plane.pcd  plane_extraction_node.h
include/triangulation/: triangulation.cpp  triangulation.h
parameters/: parameters.json  test_plane.yaml
src/: colored_cloud.pcd  mapping.sublime-workspace  plane_compression.cpp  plane_extraction.cpp  plane_reconstruction.cpp  plane_test.cpp  wall_extraction.cpp
src/clouds/: Cloud_triangle.pcd  cmprs_cloud.pcd  cmprs_mesh.vtk  compressed_extracted_planes.pcd  compressed_extracted_projected_planes.pcd  compressed_hulls_planes.pcd  compressed_rotated_planes.pcd  compressed_simplified_hulls_planes.pcd  compressed_voxel_plane.pcd  compressed_voxel_planes.pcd  mesh.vtk  test_pcd.pcd  test_pcd_plane.pcd
