<?xml version="1.0"?>
<package>
  <name>exx_plane_extraction</name>
  <version>0.0.0</version>
  <description>Robotics image processing package</description>
  <maintainer email="unnar@kth.se">unnar</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>exx_compression</build_depend>
  <run_depend>exx_compression</run_depend>
  <build_depend>ransac_primitives</build_depend>
  <run_depend>ransac_primitives</run_depend>
  <build_depend>metaroom_xml_parser</build_depend>
  <run_depend>metaroom_xml_parser</run_depend>
  <build_depend>qt_build</build_depend>
  <run_depend>qt_build</run_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>libqt4-dev</run_depend>
</package>